--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/guacamole.jpg" alt="" /></a>
 										<header>
-											<h3>A selection of startes</h3>
+											<h3>A selection of starters</h3>
 										</header>
 									</section>
 
@@ -60,7 +60,7 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/burger.jpg" alt="" /></a>
 										<header>
-											<h3>Our main plates</h3>
+											<h3>Our main dishes</h3>
 										</header>
 									</section>
 
