changement lien logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<ul>
 									<li><a class="icon fa-home" href="index.html"><span>Welcome</span></a></li>
 									<li><a class="icon fa-bars" href="index.html"><span>Menu</span></a></li>
-									<li><img src="../../logo/logo_hmb.png" alt="logo"></li>
+									<li><img src="./images/logo_hmb.png" alt="logo"></li>
 									<li><a class="icon fa-home" href="index.html"><span>where</span></a></li>
 									<li><a class="icon fa-at" href="index.html"><span>Contact</span></a></li>
 								</ul>
