--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 						<!-- Slogan -->
 							<h1 id="logo"><a href="index.html">home made burger</a></h1>
 						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li><a class="icon fa-home" href="index.html"><span>Welcome</span></a></li>
-									<li><a class="icon fa-bars" href="index.html"><span>Menu</span></a></li>
-									<li><img src="../../logo/logo_hmb.png" alt="logo"></li>
-									<li><a class="icon fa-home" href="index.html"><span>where</span></a></li>
-									<li><a class="icon fa-at" href="index.html"><span>Contact</span></a></li>
-								</ul>
-							</nav>
+						<nav id="nav">
+							<ul>
+								<li><a href="index.html"><span><i class="fas fa-home"></i>Welcome</span></a></li>
+								<li><a href="index.html"><span><i class="fas fa-bars"></i>Menu</span></a></li>
+								<li><img src="../../logo/logo_hmb.png" alt="logo"></li>
+								<li><a href="index.html"><span><i class="fas fa-map-marker-alt"></i>where</span></a></li>
+								<li><a href="index.html"><span><i class="fas fa-at"></i>Contact</span></a></li>
+							</ul>
+						</nav>
 					</div>
 				</div>
 
@@ -77,9 +77,6 @@
 
 							</div>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button icon fa-file">The complete menu</a></li>
-						</ul>
 					</section>
 				</div>
 
@@ -258,7 +255,7 @@
 				<div id="footer-wrapper">
 					<div id="footer" class="container">
 						<header>
-							<h2>Questions or comments? <strong>Get in touch:</strong></h2>
+							<h2>Questions or reservations? <strong>Get in touch:</strong></h2>
 						</header>
 						<div class="row">
 							<div class="6u 12u(mobile)">
@@ -329,7 +326,9 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Untitled. All rights reserved.</li>
+							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Conception: <a href="crea-web.solutions">Crea-Web.Solutions</a></li>
 						</ul>
 					</div>
 				</div>
@@ -344,6 +343,23 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script>
+	 function initMap() {
+		 var uluru = {lat: -25.363, lng: 131.044};
+		 var map = new google.maps.Map(document.getElementById('map'), {
+			 zoom: 4,
+			 center: uluru
+		 });
+		 var marker = new google.maps.Marker({
+			 position: uluru,
+			 map: map
+		 });
+	 }
+ </script>
+ <script async defer
+ src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+ </script>
+
 
 	</body>
 </html>
