add section and pictures

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html"><span><i class="fas fa-home"></i>Welcome</span></a></li>
-								<li><a href="index.html"><span><i class="fas fa-bars"></i>Menu</span></a></li>
+								<li><a href="#menu"><span><i class="fas fa-bars"></i>Menu</span></a></li>
 								<li><img src="./images/logo_hmb.png" alt="logo"></li>
-								<li><a href="index.html"><span><i class="fas fa-map-marker-alt"></i>where</span></a></li>
-								<li><a href="index.html"><span><i class="fas fa-at"></i>Contact</span></a></li>
+								<li><a href="#where"><span><i class="fas fa-map-marker-alt"></i>where</span></a></li>
+								<li><a href="#contact"><span><i class="fas fa-at"></i>Contact</span></a></li>
 							</ul>
 						</nav>
 
@@ -82,25 +82,73 @@
 						</div>
 					</section>
 				</div>
-
+				<!-- Main -->
+					<div id="main-wrapper">
+						<div id="main" class="container">
+							<div class="row">
 			<!-- Banner -->
-				<div id="banner-wrapper">
+				<div class="banner-wrapper">
 					<div class="inner">
-						<section id="banner" class="container">
-							<img src="images/photo_facade.jpg">
+						<section class="container banne">
+							<img src="images/photo_facade.jpg" class="separationImages">
+							<!-- <p>Use this space for <strong>profound thoughts</strong>.<br />
+							Or an enormous ad. Whatever.</p> -->
+						</section>
+					</div>
+				</div>
+				<section>
+				<header>
+					<h2>A selection of starters</h2>
+				</header>
+			</section>
+
+
+				<div class="banner-wrapper">
+					<div class="inner">
+						<section class="container banne">
+							<img src="images/bar.png" class="separationImages">
 							<!-- <p>Use this space for <strong>profound thoughts</strong>.<br />
 							Or an enormous ad. Whatever.</p> -->
 						</section>
 					</div>
 				</div>
 
-			<!-- Main -->
-				<div id="main-wrapper">
-					<div id="main" class="container">
-						<div class="row">
+				<section>
+				<header>
+					<h2>Our main dishes</h2>
+				</header>
+			</section>
+
+				<div class="banner-wrapper">
+					<div class="inner">
+						<section class="container banne">
+							<img src="images/salle.jpg" class="separationImages">
+							<!-- <p>Use this space for <strong>profound thoughts</strong>.<br />
+							Or an enormous ad. Whatever.</p> -->
+						</section>
+					</div>
+				</div>
+
+				<section>
+				<header>
+					<h2>Sweet ending</h2>
+				</header>
+			</section>
+
+				<div class="banner-wrapper">
+					<div class="inner">
+						<section class="container banne">
+							<img src="images/vache.png" class="separationImages">
+							<!-- <p>Use this space for <strong>profound thoughts</strong>.<br />
+							Or an enormouA selection of starterss ad. Whatever.</p> -->
+						</section>
+					</div>
+				</div>
+		
+
 
 							<!-- Content -->
-								<div id="content" class="8u 12u(mobile)">
+								<div id="contentz" class="8u 12u(mobile)">
 
 									<!-- Post -->
 										<article class="box post">
@@ -139,7 +187,7 @@
 														</ul>
 														</article>
 												</li>
-											</ul>	
+											</ul>
 										</section>
 
 								</div>
