--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html"><span><i class="fas fa-home"></i>Welcome</span></a></li>
-								<li><a href="#menu"><span><i class="fas fa-bars"></i>Menu</span></a></li>
+								<li><a href="#features"><span><i class="fas fa-bars"></i>Menu</span></a></li>
 								<li><img src="./images/logo_hmb.png" alt="logo"></li>
 								<li><a href="#where"><span><i class="fas fa-map-marker-alt"></i>where</span></a></li>
 								<li><a href="#contact"><span><i class="fas fa-at"></i>Contact</span></a></li>
 							</ul>
 						</nav>
-
 					</div>
+					<img class="headerIllustration" src="https://scontent.fbru1-1.fna.fbcdn.net/v/t1.0-9/34037557_222647808328513_2677070836631863296_o.jpg?_nc_cat=0&oh=0a0378784e62935540d9bed25257011e&oe=5BC51630">
 				</div>
 
 			<!-- Features -->
@@ -86,69 +86,72 @@
 					<div id="main-wrapper">
 						<div id="main" class="container">
 							<div class="row">
-			<!-- Banner -->
-				<div class="banner-wrapper">
-					<div class="inner">
-						<section class="container banne">
-							<img src="images/photo_facade.jpg" class="separationImages">
-							<!-- <p>Use this space for <strong>profound thoughts</strong>.<br />
-							Or an enormous ad. Whatever.</p> -->
+								<!-- Banner -->
+									<div class="banner-wrapper">
+										<div class="inner">
+											<section class="container banne">
+												<img src="images/photo_facade.jpg" class="separationImages">
+											</section>
+										</div>
+									</div>
+									<section>
+									<header>
+										<h2>A selection of starters</h2>
+									</header>
+								</section>
+
+
+								<div class="banner-wrapper">
+									<div class="inner">
+										<section class="container banne">
+											<img src="images/bar.png" class="separationImages">
+										</section>
+									</div>
+								</div>
+
+								<section>
+								<header>
+									<h2>Our main dishes</h2>
+								</header>
+							</section>
+
+							<div class="banner-wrapper">
+								<div class="inner">
+									<section class="container banne">
+										<img src="images/salle.jpg" class="separationImages">
+									</section>
+								</div>
+							</div>
+
+							<section>
+							<header>
+								<h2>Sweet ending</h2>
+							</header>
 						</section>
+
+						<div class="banner-wrapper">
+							<div class="inner">
+								<section class="container banne">
+									<img src="images/vache.png" class="separationImages">
+								</section>
+							</div>
+						</div>
+						<section>
+						<header>
+							<h2>A selection of starters</h2>
+						</header>
+					</section>
+					<div class="banner-wrapper">
+						<div class="inner">
+							<section class="container banne">
+								<img src="images/vache.png" class="separationImages">
+							</section>
+						</div>
 					</div>
-				</div>
-				<section>
-				<header>
-					<h2>A selection of starters</h2>
-				</header>
-			</section>
-
-
-				<div class="banner-wrapper">
-					<div class="inner">
-						<section class="container banne">
-							<img src="images/bar.png" class="separationImages">
-							<!-- <p>Use this space for <strong>profound thoughts</strong>.<br />
-							Or an enormous ad. Whatever.</p> -->
-						</section>
-					</div>
-				</div>
-
-				<section>
-				<header>
-					<h2>Our main dishes</h2>
-				</header>
-			</section>
-
-				<div class="banner-wrapper">
-					<div class="inner">
-						<section class="container banne">
-							<img src="images/salle.jpg" class="separationImages">
-							<!-- <p>Use this space for <strong>profound thoughts</strong>.<br />
-							Or an enormous ad. Whatever.</p> -->
-						</section>
-					</div>
-				</div>
-
-				<section>
-				<header>
-					<h2>Sweet ending</h2>
-				</header>
-			</section>
-
-				<div class="banner-wrapper">
-					<div class="inner">
-						<section class="container banne">
-							<img src="images/vache.png" class="separationImages">
-							<!-- <p>Use this space for <strong>profound thoughts</strong>.<br />
-							Or an enormouA selection of starterss ad. Whatever.</p> -->
-						</section>
-					</div>
-				</div>
-		
 
 
 							<!-- Content -->
-								<div id="contentz" class="8u 12u(mobile)">
+								<div id="content" class="8u 12u(mobile)">
 
 									<!-- Post -->
 										<article class="box post">
@@ -168,7 +171,7 @@
 											<ul class="divided">
 												<li>
 													<!-- Excerpt -->
-														<article class="box excerpt">
+														<article id="where" class="box excerpt full">
 															<header>
 																<h3><a href="#">Our adress</a></h3>
 															</header>
@@ -180,6 +183,9 @@
 															</li>
 															<li>
 																+32 2 269 99 32
+															</li>
+															<li>
+																<a href="https://www.facebook.com/HMB-Grill-House-190841118175849/" target="_blank"><i class="fab fa-facebook-square"></i> hmb grill house</a>
 															</li>
 															<li><div class="12u">
 																<a href="#contact" class="form-button-submit button">Contact us</a>
@@ -202,7 +208,7 @@
 							<h2>Questions or reservations? <strong>Get in touch:</strong></h2>
 						</header>
 						<div class="row">
-							<div class="6u 12u(mobile)">
+							<div class="12u 12u(mobile)">
 								<section>
 									<form method="post" action="#">
 										<div class="row 50%">
@@ -224,46 +230,6 @@
 											</div>
 										</div>
 									</form>
-								</section>
-							</div>
-							<div class="6u 12u(mobile)">
-								<section id="contact">
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
-									<div class="row">
-										<div class="6u 12u(mobile)">
-											<ul class="icons">
-												<li class="icon fa-home">
-													Steenstraat 60<br />
-													1800 Vilvorde<br />
-													Belgium
-												</li>
-												<li class="icon fa-phone">
-													+32 2 269 99 32
-												</li>
-												<li class="icon fa-envelope">
-													<a href="#">info@untitled.tld</a>
-												</li>
-											</ul>
-										</div>
-										<div class="6u 12u(mobile)">
-											<ul class="icons">
-												<li class="icon fa-twitter">
-													<a href="#">@untitled-tld</a>
-												</li>
-												<li class="icon fa-instagram">
-													<a href="#">instagram.com/untitled-tld</a>
-												</li>
-												<li class="icon fa-dribbble">
-													<a href="#">dribbble.com/untitled-tld</a>
-												</li>
-												<li class="icon fa-facebook">
-													<a href="https://www.facebook.com/HMB-Grill-House-190841118175849/">facebook.com/untitled-tld</a>
-												</li>
-											</ul>
-										</div>
-									</div>
 								</section>
 							</div>
 						</div>
